# fluidstate

./: CHANGELOG  LICENSE  NOTES  README.md  README.rst  fluidity.py  fluidstate.py  pyproject.toml  tox.ini
examples/: async_stoplight.py  intersection.py  stoplight.py
src/fluidstate/: __init__.py
tests/: boolean_state_getters_spec.py  callable_support_spec.py  callback_order_spec.py  configuration_spec.py  conftest.py  event_parameters_spec.py  event_spec.py  guard_spec.py  independence_spec.py  individuation_spec.py  one_event_multiple_transitions_spec.py  state_action_spec.py  state_change_notification_spec.py  state_spec.py  test_boolean_state_getters.py  test_callable_support.py  test_callback_order.py  test_config.py  test_configuration.py  test_event.py  test_event_parameters.py  test_guard.py  test_independence.py  test_individuation.py  test_individuation.py.bak  test_need.py  test_one_event_multiple_transitions.py  test_state.py  test_state_action.py  test_state_change_notification.py  test_state_change_notification.py.bak  test_state_getters.py  test_state_history.py.bak  test_transition.py  test_transition_action.py  test_transition_once.py  test_transition_parameters.py  test_version.py  transition_action_spec.py
tests/state/: test_entry.py  test_getters.py  test_iteration.py  test_state.py
tests/transition/: test_action.py  test_auto.py  test_kinds.py  test_parameters.py  test_transition.py  test_trigger_once.py
